# os-in-rust

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
