[package]
name = "os-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
[profile.dev]
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
# panic = "abort" # disable stack unwinding on panic
[unstable]
build-std = ["core", "compiler_builtins"]